--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 
     <div id="page-home" class="page-content">
         <div class="header-gallery">
-            <img src="http://dolansawah.hexat.com/images/8C2E210D-68C8-4A0A-B2AB-791500EA544A_thumb.jpeg" alt="Gallery Image" />
+            <img src="https://res.cloudinary.com/dn60ib3ur/image/upload/v1752467234/IMG_5184_qcsvrt.jpg" alt="Gallery Image" />
         </div>
         <div class="main-container">
             <h1>Selamat Datang di Dolan Sawah</h1>
@@ -284,7 +284,7 @@
 
             <h2>Paket Prasmanan</h2>
             <div class="image-container">
-                <img src="http://dolansawah.hexat.com/images/IMG_3494.png" alt="Menu Prasmanan" />
+                <img src="https://res.cloudinary.com/dn60ib3ur/image/upload/v1752467481/IMG_5185_qpsvip.jpg" alt="Menu Prasmanan" />
             </div>
 
             <h2>Paket Kembulan</h2>
