--- a/index.html
+++ b/index.html
@@ -362,8 +362,12 @@
             </div>
 
             <h2>Paket Grill</h2>
+            <p style="margin-bottom: 15px;">Klik gambar untuk melihat ketentuan.</p>
             <div class="image-container" onclick="showGrillTerms()">
-                <img src="https://res.cloudinary.com/dn60ib3ur/image/upload/v1752461305/560cbf7f-85b2-4ce9-81ce-8f5f9f0ed0ba_jx5cph.jpg" alt="Paket Grill" />
+                <img src="https://res.cloudinary.com/dn60ib3ur/image/upload/v1752461305/560cbf7f-85b2-4ce9-81ce-8f5f9f0ed0ba_jx5cph.jpg" alt="Paket Grill Hemat Berdua" />
+            </div>
+             <div class="image-container" onclick="showGrillTerms()">
+                <img src="https://res.cloudinary.com/dn60ib3ur/image/upload/v1752461385/3e5de018-b6b1-4da4-a0e3-2302aac49e78_gu8aai.jpg" alt="Paket Grill Hemat Berempat" />
             </div>
 
             <button class="back-button" onclick="showPage('page-home')">Kembali ke Home</button>
@@ -399,14 +403,14 @@
             <h1>Daftar Menu Reguler</h1>
 
             <div class="menu-category">
-                <h2 class="category-title">Daging & Unggas</h2>
+                <h2 class="category-title">Daging, ayam dan bebek</h2>
                 <div class="menu-item"><span class="item-name">Iga bakar</span><span class="item-dots"></span><span class="item-price">Rp 55.000</span></div>
                 <div class="menu-item"><span class="item-name">Opor bebek</span><span class="item-dots"></span><span class="item-price">Rp 38.000</span></div>
                 <div class="menu-item"><span class="item-name">Bebek goreng</span><span class="item-dots"></span><span class="item-price">Rp 35.000</span></div>
                 <div class="menu-item"><span class="item-name">Ayam rempah</span><span class="item-dots"></span><span class="item-price">Rp 35.000</span></div>
                 <div class="menu-item"><span class="item-name">Ayam kampung goreng</span><span class="item-dots"></span><span class="item-price">Rp 30.000</span></div>
                 <div class="menu-item"><span class="item-name">Opor ayam kampung</span><span class="item-dots"></span><span class="item-price">Rp 30.000</span></div>
-                <div class="menu-item"><span class="item-name">Garang asem</span><span class="item-dots"></span><span class="item-price">Rp 30.000</span></div>
+                <div class="menu-item"><span class="item-name">Garang asem ayam kampung</span><span class="item-dots"></span><span class="item-price">Rp 30.000</span></div>
                 <div class="menu-item"><span class="item-name">Ayam bakar besar</span><span class="item-dots"></span><span class="item-price">Rp 25.000</span></div>
                 <div class="menu-item"><span class="item-name">Galantin</span><span class="item-dots"></span><span class="item-price">Rp 25.000</span></div>
                 <div class="menu-item"><span class="item-name">Gemak</span><span class="item-dots"></span><span class="item-price">Rp 25.000</span></div>
@@ -425,16 +429,7 @@
                 <div class="menu-item"><span class="item-name">Ayam cabe ijo</span><span class="item-dots"></span><span class="item-price">Rp 12.000</span></div>
             </div>
 
-            <div class="menu-category">
-                <h2 class="category-title">Gongso & Pedas</h2>
-                <div class="menu-item"><span class="item-name">Cumi Gongso</span><span class="item-dots"></span><span class="item-price">Rp 25.000</span></div>
-                <div class="menu-item"><span class="item-name">Babat gongso</span><span class="item-dots"></span><span class="item-price">Rp 20.000</span></div>
-                <div class="menu-item"><span class="item-name">Tetelan Gongso</span><span class="item-dots"></span><span class="item-price">Rp 20.000</span></div>
-                <div class="menu-item"><span class="item-name">Tetelan Mercon</span><span class="item-dots"></span><span class="item-price">Rp 20.000</span></div>
-                <div class="menu-item"><span class="item-name">Kikil Gongso</span><span class="item-dots"></span><span class="item-price">Rp 15.000</span></div>
-                <div class="menu-item"><span class="item-name">Bakso mercon</span><span class="item-dots"></span><span class="item-price">Rp 15.000</span></div>
-            </div>
-             <button class="back-button" onclick="showPage('page-home')">Kembali ke Home</button>
+            <button class="back-button" onclick="showPage('page-home')">Kembali ke Home</button>
         </div>
     </div>
 
