--- a/index.html
+++ b/index.html
@@ -429,6 +429,95 @@
                 <div class="menu-item"><span class="item-name">Ayam cabe ijo</span><span class="item-dots"></span><span class="item-price">Rp 12.000</span></div>
             </div>
 
+            <div class="menu-category">
+                <h2 class="category-title">Gongso & Pedas</h2>
+                <div class="menu-item"><span class="item-name">Cumi Gongso</span><span class="item-dots"></span><span class="item-price">Rp 25.000</span></div>
+                <div class="menu-item"><span class="item-name">Babat gongso</span><span class="item-dots"></span><span class="item-price">Rp 20.000</span></div>
+                <div class="menu-item"><span class="item-name">Tetelan Gongso</span><span class="item-dots"></span><span class="item-price">Rp 20.000</span></div>
+                <div class="menu-item"><span class="item-name">Tetelan Mercon</span><span class="item-dots"></span><span class="item-price">Rp 20.000</span></div>
+                <div class="menu-item"><span class="item-name">Kikil Gongso</span><span class="item-dots"></span><span class="item-price">Rp 15.000</span></div>
+                <div class="menu-item"><span class="item-name">Bakso mercon</span><span class="item-dots"></span><span class="item-price">Rp 15.000</span></div>
+            </div>
+
+            <div class="menu-category">
+                <h2 class="category-title">Ikan & Seafood</h2>
+                <div class="menu-item"><span class="item-name">Nila Pesmol</span><span class="item-dots"></span><span class="item-price">Rp 22.000</span></div>
+                <div class="menu-item"><span class="item-name">Nila cabe ijo</span><span class="item-dots"></span><span class="item-price">Rp 22.000</span></div>
+                <div class="menu-item"><span class="item-name">Nila bumbu rujak</span><span class="item-dots"></span><span class="item-price">Rp 22.000</span></div>
+                <div class="menu-item"><span class="item-name">Nila Bakar</span><span class="item-dots"></span><span class="item-price">Rp 22.000</span></div>
+                <div class="menu-item"><span class="item-name">Nila asam manis</span><span class="item-dots"></span><span class="item-price">Rp 22.000</span></div>
+                <div class="menu-item"><span class="item-name">Ikan Bawal</span><span class="item-dots"></span><span class="item-price">Rp 22.000</span></div>
+                <div class="menu-item"><span class="item-name">Bandeng Utuh</span><span class="item-dots"></span><span class="item-price">Rp 20.000</span></div>
+                <div class="menu-item"><span class="item-name">Belut</span><span class="item-dots"></span><span class="item-price">Rp 20.000</span></div>
+                <div class="menu-item"><span class="item-name">Lele Bakar</span><span class="item-dots"></span><span class="item-price">Rp 15.000</span></div>
+                <div class="menu-item"><span class="item-name">Bandeng 1/2</span><span class="item-dots"></span><span class="item-price">Rp 15.000</span></div>
+                <div class="menu-item"><span class="item-name">Lele mangut</span><span class="item-dots"></span><span class="item-price">Rp 15.000</span></div>
+                <div class="menu-item"><span class="item-name">Lele bumbu rujak</span><span class="item-dots"></span><span class="item-price">Rp 15.000</span></div>
+                <div class="menu-item"><span class="item-name">Kakap asam manis</span><span class="item-dots"></span><span class="item-price">Rp 15.000</span></div>
+                <div class="menu-item"><span class="item-name">Mangut sambal</span><span class="item-dots"></span><span class="item-price">Rp 15.000</span></div>
+            </div>
+
+            <div class="menu-category">
+                <h2 class="category-title">Aneka Sayuran & Tumis</h2>
+                <div class="menu-item"><span class="item-name">Tumis Buncis daging sapi</span><span class="item-dots"></span><span class="item-price">Rp 12.000</span></div>
+                <div class="menu-item"><span class="item-name">Capcay</span><span class="item-dots"></span><span class="item-price">Rp 10.000</span></div>
+                <div class="menu-item"><span class="item-name">Sayur Labu Siam</span><span class="item-dots"></span><span class="item-price">Rp 10.000</span></div>
+                <div class="menu-item"><span class="item-name">Sambel goreng kentang</span><span class="item-dots"></span><span class="item-price">Rp 10.000</span></div>
+                <div class="menu-item"><span class="item-name">Terong balado</span><span class="item-dots"></span><span class="item-price">Rp 10.000</span></div>
+                <div class="menu-item"><span class="item-name">Cah brokoli</span><span class="item-dots"></span><span class="item-price">Rp 10.000</span></div>
+                <div class="menu-item"><span class="item-name">Sop jagung</span><span class="item-dots"></span><span class="item-price">Rp 8.000</span></div>
+                <div class="menu-item"><span class="item-name">Tumis pare</span><span class="item-dots"></span><span class="item-price">Rp 8.000</span></div>
+                <div class="menu-item"><span class="item-name">Tumis kacang panjang</span><span class="item-dots"></span><span class="item-price">Rp 8.000</span></div>
+                <div class="menu-item"><span class="item-name">Cah Tauge</span><span class="item-dots"></span><span class="item-price">Rp 5.000</span></div>
+                <div class="menu-item"><span class="item-name">Sayur asem</span><span class="item-dots"></span><span class="item-price">Rp 5.000</span></div>
+                <div class="menu-item"><span class="item-name">Sop Sosis Jamur</span><span class="item-dots"></span><span class="item-price">Rp 5.000</span></div>
+                <div class="menu-item"><span class="item-name">Bunga Pepaya</span><span class="item-dots"></span><span class="item-price">Rp 5.000</span></div>
+                <div class="menu-item"><span class="item-name">Orak-arik telur</span><span class="item-dots"></span><span class="item-price">Rp 5.000</span></div>
+                <div class="menu-item"><span class="item-name">Daun pepaya</span><span class="item-dots"></span><span class="item-price">Rp 5.000</span></div>
+                <div class="menu-item"><span class="item-name">Tumis kembang kol</span><span class="item-dots"></span><span class="item-price">Rp 5.000</span></div>
+                <div class="menu-item"><span class="item-name">Jantung pisang</span><span class="item-dots"></span><span class="item-price">Rp 5.000</span></div>
+                <div class="menu-item"><span class="item-name">Gudangan</span><span class="item-dots"></span><span class="item-price">Rp 4.000</span></div>
+            </div>
+
+            <div class="menu-category">
+                <h2 class="category-title">Lauk Tambahan & Pelengkap</h2>
+                <div class="menu-item"><span class="item-name">Gudeg krecek</span><span class="item-dots"></span><span class="item-price">Rp 15.000</span></div>
+                <div class="menu-item"><span class="item-name">Sambel goreng ati</span><span class="item-dots"></span><span class="item-price">Rp 15.000</span></div>
+                <div class="menu-item"><span class="item-name">Telur Barendo</span><span class="item-dots"></span><span class="item-price">Rp 12.000</span></div>
+                <div class="menu-item"><span class="item-name">Ampela-Ati</span><span class="item-dots"></span><span class="item-price">Rp 10.000</span></div>
+                <div class="menu-item"><span class="item-name">Telur Balado</span><span class="item-dots"></span><span class="item-price">Rp 10.000</span></div>
+                <div class="menu-item"><span class="item-name">Telur bacem</span><span class="item-dots"></span><span class="item-price">Rp 8.000</span></div>
+                <div class="menu-item"><span class="item-name">Telur asam manis</span><span class="item-dots"></span><span class="item-price">Rp 8.000</span></div>
+                <div class="menu-item"><span class="item-name">Sosis besar</span><span class="item-dots"></span><span class="item-price">Rp 7.000</span></div>
+                <div class="menu-item"><span class="item-name">Risol Mayo</span><span class="item-dots"></span><span class="item-price">Rp 6.000</span></div>
+                <div class="menu-item"><span class="item-name">Lumpia Semarang</span><span class="item-dots"></span><span class="item-price">Rp 6.000</span></div>
+                <div class="menu-item"><span class="item-name">Telur Ceplok</span><span class="item-dots"></span><span class="item-price">Rp 6.000</span></div>
+                <div class="menu-item"><span class="item-name">Bakmi goreng</span><span class="item-dots"></span><span class="item-price">Rp 5.000</span></div>
+                <div class="menu-item"><span class="item-name">Bihun goreng</span><span class="item-dots"></span><span class="item-price">Rp 5.000</span></div>
+                <div class="menu-item"><span class="item-name">Sate ayam/tusuk</span><span class="item-dots"></span><span class="item-price">Rp 5.000</span></div>
+                <div class="menu-item"><span class="item-name">Sate-satean kecil</span><span class="item-dots"></span><span class="item-price">Rp 4.000</span></div>
+                <div class="menu-item"><span class="item-name">Tahu/Tempe bacem</span><span class="item-dots"></span><span class="item-price">Rp 3.000</span></div>
+                <div class="menu-item"><span class="item-name">Bakwan jagung</span><span class="item-dots"></span><span class="item-price">Rp 3.000</span></div>
+            </div>
+
+             <div class="menu-category">
+                <h2 class="category-title">Sambal & Lalapan</h2>
+                <div class="menu-item"><span class="item-name">Sambal Matah</span><span class="item-dots"></span><span class="item-price">Rp 5.000</span></div>
+                <div class="menu-item"><span class="item-name">Lalapan</span><span class="item-dots"></span><span class="item-price">Rp 3.000</span></div>
+                <div class="menu-item"><span class="item-name">Sambal Bawang</span><span class="item-dots"></span><span class="item-price">Rp 3.000</span></div>
+                <div class="menu-item"><span class="item-name">Sambal kecap</span><span class="item-dots"></span><span class="item-price">Rp 3.000</span></div>
+                <div class="menu-item"><span class="item-name">Sambal tomat</span><span class="item-dots"></span><span class="item-price">Rp 3.000</span></div>
+            </div>
+
+            <div class="menu-category">
+                <h2 class="category-title">Minuman</h2>
+                <div class="menu-item"><span class="item-name">Naruna Coffee</span><span class="item-dots"></span><span class="item-price">Rp 20.000</span></div>
+                <div class="menu-item"><span class="item-name">Dolan Sawah Breeze</span><span class="item-dots"></span><span class="item-price">Rp 20.000</span></div>
+                <div class="menu-item"><span class="item-name">Susu Jelly</span><span class="item-dots"></span><span class="item-price">Rp 15.000</span></div>
+                <div class="menu-item"><span class="item-name">Flavoured Latte</span><span class="item-dots"></span><span class="item-price">Rp 15.000</span></div>
+                <div class="menu-item"><span class="item-name">Jus Buah</span><span class="item-dots"></span><span class="item-price">Rp 12.000</span></div>
+            </div>
+
             <button class="back-button" onclick="showPage('page-home')">Kembali ke Home</button>
         </div>
     </div>
