--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                     showPage(hash);
                 } else {
                     showPage("page-home");
-                    openPopup("Mohon Perhatian 🙏","<h3>Syarat Dan Ketentuan Reservasi</h3><ul><li>DP Reservasi minimum 50% dari total pesanan.</li><li>Reservasi akan dikonfirmasi setelah bukti DP telah dikirimkan.</li><li>Waktu penggunaan tempat untuk tiap Reservasi adalah 2 jam.</li><li>Dilarang membawa makanan atau minuman apapun dari luar Resto.</li><li>Reservasi minimum H-3 dari tanggal Reservasi.</li><li>Request tambahan harap dikoordinasikan saat melakukan pemesanan (maksimum H-3).</li></ul>","Lanjutkan");
+                    openPopup("Mohon Perhatian 🙏","<h3>Syarat Dan Ketentuan Reservasi</h3><ul><li>DP Reservasi minimum 50% dari total pesanan.</li><li>Reservasi akan dikonfirmasi setelah bukti DP telah dikirimkan.</li><li>Waktu penggunaan tempat untuk tiap Reservasi adalah 2 jam.</li><li>Dilarang membawa makanan atau minuman apapun dari luar Resto.</li><li>Reservasi maksimum H-3 dari tanggal Reservasi.</li><li>Request tambahan harap dikoordinasikan saat melakukan pemesanan (maksimum H-3).</li></ul>","Lanjutkan");
                 }
             }
 
