--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             genericPopup.classList.remove("show");
         }
 
-        function showPrasmananTerms(){openPopup("Ketentuan Menu Prasmanan","<ul><li>Minimum 20 pax untuk tiap menu.</li><li>Kombinasi varian maksimal 2 jenis menu paket untuk tiap grup reservasi (minimal 20 paket tiap reservasi).</li><li>Harga belum termasuk PPN 10%.</li></ul>")}
+        function showPrasmananTerms(){openPopup("Ketentuan Menu Prasmanan","<ul><li>Minimum 20 pax untuk tiap menu.</li><li>Kombinasi varian maksimal 2 jenis menu paket untuk tiap grup reservasi (minimal 20 pax tiap menu).</li><li>Harga belum termasuk PPN 10%.</li></ul>")}
         function showKembulanTerms(){openPopup("Ketentuan Menu Kembulan","<ul><li>Reservasi maksimal H-1.</li><li>Tersedia paket untuk 5 dan 10 orang, serta kelipatannya.</li><li>DP minimal 50% dari total pesanan.</li><li>Harga belum termasuk PPN 10%.</li></ul>")}
         function showRantangTerms(){openPopup("Ketentuan Paket Rantang","<ul><li>Untuk jumlah di atas 15 pax, diwajibkan reservasi maksimal H-1.</li><li>DP minimal 50% dari total pesanan.</li><li>Harga belum termasuk PPN 10%.</li></ul>")}
         function showGrillTerms(){openPopup("Ketentuan Paket Grill","<ul><li>Lokasi yang bisa digunakan untuk paket ini adalah area Barbeque ground di bagian belakang resto.</li><li>Maksimum 6 Pax per reservasi.</li><li>DP untuk semua paket grill adalah Rp 100.000.</li><li>Harga belum termasuk PPN 10%.</li></ul>")}
