--- a/index.html
+++ b/index.html
@@ -119,6 +119,14 @@
         #page-home .orange { background: linear-gradient(45deg, #ff9800, #ff5722); }
         #page-home .green { background: linear-gradient(45deg, #4caf50, #8bc34a); }
         #page-home .button:hover { transform: scale(1.05); opacity: 0.9; }
+
+        /* --- CSS BARU UNTUK TOMBOL PENTING --- */
+        #tombol-penting {
+            animation: blink-effect 1.5s infinite alternate;
+            box-shadow: 0px 0px 15px rgba(255, 152, 0, 0.8);
+            border: 2px solid #ffeb3b;
+        }
+        /* --- AKHIR CSS BARU --- */
         
         #page-home .floating-button {
             display: flex; justify-content: center; align-items: center; gap: 10px;
@@ -249,7 +257,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"/></svg>
                 <span>Jadwal Buka</span>
             </a>
-            <a href="https://dewatalaptop.github.io/checkerds" target="_blank" rel="noopener noreferrer" class="button orange">
+            <a href="https://dewatalaptop.github.io/checkerds" target="_blank" rel="noopener noreferrer" id="tombol-penting" class="button orange">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"/></svg>
                 <span>Periksa Ketersediaan Tempat</span>
             </a>
