--- a/daftarmember.html
+++ b/daftarmember.html
@@ -380,7 +380,7 @@
                 <div class="leaderboard-container">
                     <h3>
                         <span class="material-symbols-outlined">emoji_events</span>
-                        Anggota Terbaik Kami
+                        Para Pelanggan Setia Dolan Sawah
                     </h3>
                     <ol class="leaderboard-list" id="leaderboard-list">
                         <li class="leaderboard-loading">Memuat data...</li>
