--- a/daftarmember.html
+++ b/daftarmember.html
@@ -393,7 +393,7 @@
                     <span class="material-symbols-outlined">arrow_forward</span>
                 </button>
                 
-                <a href="https://www.dolansawah.my.id/memberprofile.html" class="btn btn-outline-primary" target="_blank">
+                <a href="https://dewatalaptop.github.io/memberhpds/memberprofile.html" class="btn btn-outline-primary" target="_blank">
                     <span class="btn-text">Sudah menjadi member? Cek profil Anda</span>
                     <span class="material-symbols-outlined">account_circle</span>
                 </a>
