--- a/ds-delivery.html
+++ b/ds-delivery.html
@@ -1034,7 +1034,7 @@
             // Format URL Google Maps standar
             const mapLink = `https://www.google.com/maps/search/?api=1&query=${lat},${lng}`;
 
-            let msg = `Halo Dolan Sawah, saya mau pesan:\n\n`;
+            let msg = `Halo Jeggboy, saya mau pesan makanan dari Resto Dolan Sawah Pulutan Salatiga:\n\n`;
             
             cart.forEach(item => {
                 msg += `▪️ ${item.qty}x ${item.name} (@Rp ${formatRupiah(item.price)})\n`;
