--- a/reservasimandiri.html
+++ b/reservasimandiri.html
@@ -204,7 +204,7 @@
 
   <header>
     <h1><i class="fas fa-leaf"></i> Dolan Sawah</h1>
-    <div class="dynamic-title" id="headerTitle">Halo, Mau Kapan?</div>
+    <div class="dynamic-title" id="headerTitle">Halo, Silahkan pilih waktu reservasi Anda?</div>
     
     <div class="step-indicator">
       <div class="step-wrapper active" id="dot1"><div class="step-dot"></div><span class="step-label">Waktu</span></div>
